package hkeller.escolacaesguia.socializador.enums;

public enum EnumEstadoCivil {
}
