package hkeller.escolacaesguia.socializador.enums;

public enum EnumGrauInstrucao {
}
